--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,13 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
+    "pdfkit": "^0.17.2",
     "pg": "^8.17.2",
     "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
