--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,11 @@
+
 {
   "routes": [
     {
-      "src": "/(.*)",
+      "handle": "filesystem"
+    },
+    {
+      "src": "/.*",
       "dest": "/index.html"
     }
   ]
